Funcionando Deletar da arrecadacao

--- a/gerencial.html
+++ b/gerencial.html
@@ -51,12 +51,12 @@
             <h1><b>Olá, usuário!</b></h1>
             <h5>Seja bem-vindo ao Portal do Voluntário do CoviDonation!</h5>
             <hr>
-            <div style="background-color: forestgreen; border-radius: 25px;" class="text-center text-white">
+            <!-- <div style="background-color: forestgreen; border-radius: 25px;" class="text-center text-white">
                 <br>
                 <h3>Valor Arrecado pelo o CoviDonation Até o Momento:</h3>
                 <h1><b><i class="fas fa-caret-up"></i> R$ 39.166,18</b></h1>
                 <br>
-            </div>
+            </div> -->
         </section>
 
         </section>
@@ -92,7 +92,7 @@
 
 
     </main>
-    <footer class="bg-light">
+    <footer class="bg-light footer" style="margin-top:250px;">
         <hr>
         <p class="text-center font">Portal do Voluntário <br>CoviDonation - Todos os direitos reservados</p>
     </footer>
